# Wikipedia-

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/tests/: test_auth.py
backend/apps/articles/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/articles/management/commands/: seed.py
backend/apps/articles/migrations/: 0001_initial.py
backend/apps/articles/tests/: test_api.py  test_models.py
backend/apps/common/: pagination.py  utils.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
encyclopedia/templates/encyclopedia/: all_pages.html  create_page.html  delete_page.html  edit_page.html  error.html  info.html  search_results.html
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: articles.ts  auth.ts  categories.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/lib/: api.ts  tokens.ts  types.ts  utils.ts
frontend/src/pages/: ArticlePage.tsx  BrowsePage.tsx  CategoriesPage.tsx  CategoryPage.tsx  EditorPage.tsx  HistoryPage.tsx  HomePage.tsx  (+5 more)
(+24 files in other folders)
