[project]
name = "wikiverse-backend"
version = "1.0.0"
description = "Wikiverse — a modern open-encyclopedia API (Django + DRF)."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C4", "SIM"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.ruff.lint.per-file-ignores]
"settings.py" = ["F405", "F403"]
"*/tests/*" = ["S101"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "manage.py", "config/*"]
